@@ -92,6 +92,7 @@ typedef struct opcode {
 #define AVRPART_AVR32          0x0100  /* part is in AVR32 family */
 #define AVRPART_INIT_SMC       0x0200  /* part will undergo chip erase */
 #define AVRPART_WRITE          0x0400  /* at least one write operation specified */
+#define AVRPART_HAS_TPI        0x0800  /* part has TPI i/f rather than ISP (ATtiny4/5/9/10) */
 
 #define AVR_DESCLEN 64
 #define AVR_IDLEN   32
